workshop04/wp/app/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wpapp-svc
  labels:
    name: wpapp-svc
spec:
  type: ClusterIP
  selector:
    name: wpapp-pod
    app: wpapp
    tier: app
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
