workshop04/wp/app/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpapp-ing
  labels:
    name: wpapp-ing
spec:
  ingressClassName: nginx
  rules:
  - host: wp-144.126.241.155.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wpapp-svc
            port:
              number: 80
